@@ -2,6 +2,7 @@
 
     * Remove "Offline installation" functionality.
     * Fix "Quick setup is not launchable" issue.
+    * We can skip repository detection in "Quick setup" now.
 
 2010-03-20 MA Yue <velly.empire@gmail.com>
 
